Fix not intended overflow of main content on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -193,6 +193,18 @@ body > div {
   --radius-xl: calc(var(--radius) + 4px);
 }
 
+@tailwind utilities;
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
